--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -5,6 +5,7 @@
   padding-top: 100px;
   padding-bottom: 215px;
   padding-left: 80px;
+  background-position: center;
 }
 
 .recipes__title {
@@ -26,6 +27,7 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  padding-bottom: 80px;
 }
 
 .recipes__videos {
@@ -53,4 +55,8 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
+}
+
+.recipes__iframe {
+  border: none;
 }
