--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -4,6 +4,7 @@
   background-size: cover;
   padding-top: 100px;
   padding-bottom: 120px;
+  background-position: center;
 }
 
 .reservation__title {
@@ -14,6 +15,7 @@
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
+  margin: 0;
 }
 
 .reservation__form {
@@ -21,12 +23,12 @@
   margin: 0 auto;
 }
 
-.form__fieldset {
+.reservation__form_fieldset {
   margin: 0;
   border: none;
 }
 
-.form__input {
+.reservation__form_input {
   display: block;
   margin-top: 8px;
   margin-bottom: 32px;
@@ -39,13 +41,15 @@
   font-size: 20px;
   line-height: 30px;
   color: #838383;
+  border-color: #838383;
 }
 
-.form__button {
+.reservation__form_button {
   display: block;
   height: 60px;
   width: 100%;
   margin: 32px 0 32px 0;
+  border: none;
   border-radius: 4px;
   background-color: #2f80ed;
   color: #fff;
@@ -58,18 +62,18 @@
   line-height: 20px;
 }
 
-.form__button:hover {
+.reservation__form_button:hover {
   opacity: 70%;
 }
 
-.form__checkbox {
+.reservation__form_checkbox {
   border-radius: 2px;
   height: 20px;
   width: 20px;
   margin-right: 12px;
 }
 
-.form__label {
+.reservation__form_label {
   font-family: "Inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
