--- a/pages/index.css
+++ b/pages/index.css
@@ -5,12 +5,4 @@
 @import url("../blocks/reservation.css");
 @import url("../blocks/about.css");
 @import url("../blocks/footer.css");
-
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
+@import url("../blocks/page.css");
