--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -23,12 +23,12 @@
   margin: 0 auto;
 }
 
-.reservation__form_fieldset {
+.reservation__form-fieldset {
   margin: 0;
   border: none;
 }
 
-.reservation__form_input {
+.reservation__form-input {
   display: block;
   margin-top: 8px;
   margin-bottom: 32px;
@@ -44,7 +44,7 @@
   border-color: #838383;
 }
 
-.reservation__form_button {
+.reservation__form-button {
   display: block;
   height: 60px;
   width: 100%;
@@ -62,18 +62,18 @@
   line-height: 20px;
 }
 
-.reservation__form_button:hover {
+.reservation__form-button:hover {
   opacity: 70%;
 }
 
-.reservation__form_checkbox {
+.reservation__form-checkbox {
   border-radius: 2px;
   height: 20px;
   width: 20px;
   margin-right: 12px;
 }
 
-.reservation__form_label {
+.reservation__form-label {
   font-family: "Inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
