--- a/blocks/header.css
+++ b/blocks/header.css
@@ -25,44 +25,6 @@
   line-height: 72px;
 }
 
-.header__nav {
-  display: flex;
-  justify-content: end;
-  font-family: "Inter", arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header__logo {
-  width: 125px;
-  height: 142px;
-  position: absolute;
-  top: 30px;
-  left: 30px;
-}
-
-.header__nav-links {
-  display: flex;
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
-  column-gap: 20px;
-  align-items: center;
-}
-
-.header__nav-link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: 500;
-  transition: color 1s ease;
-}
-
-.header__nav-link:hover {
-  color: #2f80ed;
-}
-
 .header__title {
   font-family: "Inter", arial, sans-serif;
   font-style: normal;
@@ -72,6 +34,7 @@
   margin: 202px 0 0;
   max-width: 729px;
   z-index: 1;
+  position: relative;
 }
 
 .header__description {
@@ -83,6 +46,7 @@
   margin: 28px 0 0;
   max-width: 683px;
   z-index: 1;
+  position: relative;
 }
 
 .header__image {
