--- a/blocks/form.css
+++ b/blocks/form.css
@@ -18,6 +18,7 @@
   line-height: 30px;
   color: #838383;
   border-color: #838383;
+  box-sizing: border-box;
 }
 
 .form__button {
@@ -56,4 +57,9 @@
   font-size: 16px;
 
   line-height: 20px;
+}
+
+.form__label_type_checkbox {
+  display: flex;
+  justify-content: center;
 }
